--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -13,6 +13,7 @@
                     <p>Below is the information on file for you and your church.
                     If any of this needs to be updated, please cancel this registration process, update your liaison and church information, and then start registering again.</p>
                     <table class='registration_table' id="liaison_info_table">
+                      <tr><td>ID</td><td id="liaison_id" ><%= @liaison.id %></td></tr>
                       <tr><td>Your Name</td><td><%= @liaison.name %></td></tr>
                       <tr><td>Your Email</td><td><%= @liaison.email1 %></td></tr>
                       <tr><td>Your Cell Phone</td><td><%= @liaison.cell_phone %></td></tr>
@@ -131,7 +132,7 @@
               </div>
               <div class="clear"></div>
               <div class="button_container">
-                <img class="reg_button next_button" id="submit_fifth" align="right" width="120" height="38" title="Go on to the next step">
+                <img class="reg_button no_more_choices_button" id="submit_fifth" align="right" width="120" height="38" title="Go on to the next step">
                 <img class="reg_button add_choice_button" id="add_choice" align="right" width="120" height="38" title="Add this choice">
                 <%=  link_to image_tag("cancel.png", :alt => "Cancel", :width => "120",  :height => "38"), :back, title => 'Cancel and return to liaison page' %>
                 <img class="reg_button back_button" id="back_fifth" width="120" height="38" title="Go back to the previous step">
@@ -141,7 +142,26 @@
 
 
               <div id="sixth_step">
-              <h1>Step 6: Confirm Registration</h1>
+              <h1>Step 6: Add Comments and Special Notes</h1>
+                <div class="form">
+                  <p>Do you have any special requirements or requests that we should know about? Do
+                  you want to be scheduled together with another group?</p>
+                  <p>What about scholarship needs? We have increased our scholarship fund and urge those
+                  in need to take advantage of it. By letting us know your situation, it will help us plan
+                  better.  Scholarships will be applied to the second and final payments.</p>
+                  <%=  r.text_area("comments", :size => "40x6") %>
+                </div>
+              <div class="clear"></div>
+                <div class="button_container">
+                  <img class="reg_button next_button" id="submit_sixth" align="right" width="120" height="38" title="Go on to the next step">
+                  <%=  link_to image_tag("cancel.png", :alt => "Cancel", :width => "120",  :height => "38"), :back, title => 'Cancel and return to liaison page' %>
+                  <img class="reg_button back_button" id="back_sixth" width="120" height="38" title="Go back to the previous step">
+                </div>
+              </div>
+            <div class="clear"></div>
+
+            <div id="seventh_step">
+              <h1>Step 7: Confirm Registration</h1>
                 <div class="form">
                   <p>Please review this information for accuracy. Use the 'back' button if you want to change anything
                     before submitting. Once you press the 'Send' button, your group will be registered.  You must proceed
@@ -162,16 +182,17 @@
                 </div>
               <div class="clear"></div>
                 <div class="button_container">
-                  <img class="reg_button confirm_button" id="submit_sixth" align="right" width="120" height="38" title="Go on to the next step">
+                  <img class="reg_button confirm_button" id="submit_seventh" align="right" width="120" height="38" title="Go on to the next step">
                   <%=  link_to image_tag("cancel.png", :alt => "Cancel", :width => "120",  :height => "38"), :back, title => 'Cancel and return to liaison page' %>
-                  <img class="reg_button back_button" id="back_sixth" width="120" height="38" title="Go back to the previous step">
+                  <img class="reg_button back_button" id="back_seventh" width="120" height="38" title="Go back to the previous step">
                 </div>
               </div>
             <div class="clear"></div>
 
 
-            <div id="seventh_step">
-              <h1>Step 7: Make Payment</h1>
+            <div id="eighth_step">
+              <h1>Step 8: Make Payment</h1>
+              <div id="save_message"></div>
               <div class="form">
                   <h4>You have two options for making your deposit payment.</h4>
                   <h4>You may proceed to SSP's secure payment gateway and use a credit or debit
@@ -182,15 +203,15 @@
               </div>
               <div class="clear"></div>
               <div class="button_container">
-                <img class="reg_button next_button" id="submit_seventh" align="right" width="120" height="38" title="Go on to the next step">
+                <img class="reg_button next_button" id="submit_eighth" align="right" width="120" height="38" title="Go on to the next step">
                 <%=  link_to image_tag("cancel.png", :alt => "Cancel", :width => "120",  :height => "38"), :back, title => 'Cancel and return to liaison page' %>
-                <img class="reg_button back_button" id="back_seventh" width="120" height="38" title="Go back to the previous step">
+                <img class="reg_button back_button" id="back_eighth" width="120" height="38" title="Go back to the previous step">
               </div>
             </div>
             <div class="clear"></div>
 
-            <div id="eighth_step">
-              <h1>Step 8: Registration Complete!</h1>
+            <div id="ninth_step">
+              <h1>Step 9: Registration Complete!</h1>
               <div class="form">
                 <p>Congratulations. You have successfully completed your group's registration. Please print
                   a copy of this screen for your records.  You will shortly receive an email confirmation. If
@@ -209,8 +230,8 @@
                   </table>
                 <div class="clear"></div>
               </div>
-                  <div class="reg_buttons" id="submit_eight">
-                    <%=  link_to image_tag("cancel.png", :alt => "Liaison Page", :width => "120",  :height => "38"), :back, title => 'Return to liaison page' %>
+                  <div class="reg_buttons" id="submit_ninth">
+                    <%=  link_to image_tag("print.png", :alt => "", :width => "250",  :height => "38"), :back, title => 'Return to liaison page' %>
                   </div>
 
             </div>
