--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,8 @@
 <div id= "header">
+  <noscript>In order to use this system, JavaScript must be enable on your browser.</noscript>
+
     <ul class="header_item" id="tabs">
+
         <% if signed_in? && current_admin_user.admin? %>
           <h1 id="site_title">SSP Manager</h1>
             <%= link_to "Home", root_path %>
