--- a/app/views/registration/_save_registration_data.html.erb
+++ b/app/views/registration/_save_registration_data.html.erb
@@ -1,3 +1,3 @@
-<input type = "hidden" name="site_name" value="<%= @registration_saved %>" />
-<input type = "hidden" name="registration_id" value="<%= @registration_id %>" />
-<h4 id="save_message"><%= @message %></h4>
+<input type = "hidden" name="save_status" id= "save_status value="<%= @registration_saved %>" />
+<input type ="hidden" name="registration_id" id="registration_id" value="<%= @registration_id %>" />
+<div id="save_message"><%= @message %></div>
