Print function - abort - plus updating of final information.

--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -1,4 +1,4 @@
-<link rel="stylesheets" href="print.css" type="text/css" media="print" />
+<link rel="stylesheets" href="../../../old_assets/print.css" type="text/css" media="print" />
 <div id='active_admin_content'>
     <div id='register_header'>
         <h4><%= link_to "Help with scheduling a group", "#" %></h4>
