--- a/app/assets/stylesheets/registration.css
+++ b/app/assets/stylesheets/registration.css
@@ -147,8 +147,20 @@ input[type="submit"]:focus, input[type="button"]:focus {
             background: url("confirm.png") no-repeat;
         }
         .print_button {
-            margin-left: auto;
-            margin-right: auto;
+            /*margin-left: auto;*/
+            /*margin-right: auto;*/
+            float: left;
+            border: none;
+            width: 350px;
+            height: 38px;
+            display: block;
+            padding-bottom: 10px;
+            background: url("print.png") no-repeat;
+        }
+        .return_button {
+            /*margin-left: auto;*/
+            /*margin-right: auto;*/
+            float: left;
             border: none;
             width: 350px;
             height: 38px;
